build_output.log
[1/167] Building CXX object src/modules/articulated_chassis/predictive_traction/CMakeFiles/modules__articulated_chassis__predictive_traction.dir/PredictiveTractionControl.cpp.obj
FAILED: src/modules/articulated_chassis/predictive_traction/CMakeFiles/modules__articulated_chassis__predictive_traction.dir/PredictiveTractionControl.cpp.obj 
/usr/lib/ccache/arm-none-eabi-g++  -DCONFIG_ARCH_BOARD_HKUST_NXT_DUAL_WL_REAR -DMODULE_NAME=\"predictive_traction\" -DPX4_MAIN=predictive_traction_app_main -D_SYS_CDEFS_H_ -D_SYS_REENT_H_ -D__CUSTOM_FILE_IO__ -D__PX4_NUTTX -D__STDC_FORMAT_MACROS -I../../boards/hkust/nxt-dual-wl-rear/src -I../../platforms/nuttx/src/px4/common/include -I. -Isrc/lib -I../../platforms/nuttx/src/px4/stm/stm32h7/include -I../../platforms/common -I../../platforms/common/include -I../../src -I../../src/include -I../../src/lib -I../../src/lib/matrix -I../../src/modules -I../../platforms/nuttx/NuttX/nuttx/arch/arm/src/armv7-m -I../../platforms/nuttx/NuttX/nuttx/arch/arm/src/chip -I../../platforms/nuttx/NuttX/nuttx/arch/arm/src/common -I../../platforms/nuttx/NuttX/apps/include -Iexternal/Install/include -isystem ../../platforms/nuttx/NuttX/include/cxx -isystem ../../platforms/nuttx/NuttX/nuttx/include/cxx -isystem ../../platforms/nuttx/NuttX/nuttx/include -mcpu=cortex-m7 -mthumb -mfpu=fpv5-d16 -mfloat-abi=hard -Os -DNDEBUG   -g -fdata-sections -ffunction-sections -fomit-frame-pointer -fmerge-all-constants -fno-signed-zeros -fno-trapping-math -freciprocal-math -fno-math-errno -fno-strict-aliasing -fvisibility=hidden -include visibility.h -Wall -Wextra -Werror -Warray-bounds -Wcast-align -Wdisabled-optimization -Wdouble-promotion -Wfatal-errors -Wfloat-equal -Wformat-security -Winit-self -Wlogical-op -Wpointer-arith -Wshadow -Wuninitialized -Wunknown-pragmas -Wunused-variable -Wno-missing-field-initializers -Wno-missing-include-dirs -Wno-unused-parameter -fdiagnostics-color=always -Wno-stringop-truncation -fno-builtin-printf -fno-strength-reduce -Wformat=1 -Wunused-but-set-variable -Wno-format-truncation -fcheck-new -Wreorder -Wno-overloaded-virtual -fno-rtti -fno-exceptions -fno-sized-deallocation -fno-threadsafe-statics -nostdinc++ -Wframe-larger-than=2048 -std=gnu++14 -MD -MT src/modules/articulated_chassis/predictive_traction/CMakeFiles/modules__articulated_chassis__predictive_traction.dir/PredictiveTractionControl.cpp.obj -MF src/modules/articulated_chassis/predictive_traction/CMakeFiles/modules__articulated_chassis__predictive_traction.dir/PredictiveTractionControl.cpp.obj.d -o src/modules/articulated_chassis/predictive_traction/CMakeFiles/modules__articulated_chassis__predictive_traction.dir/PredictiveTractionControl.cpp.obj -c ../../src/modules/articulated_chassis/predictive_traction/PredictiveTractionControl.cpp
In file included from ../../src/modules/articulated_chassis/predictive_traction/PredictiveTractionControl.cpp:1:
../../src/modules/articulated_chassis/predictive_traction/PredictiveTractionControl.hpp:11:10: fatal error: uORB/topics/WheelSpeedsSetpoint.h: No such file or directory
   11 | #include <uORB/topics/WheelSpeedsSetpoint.h>
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
[2/167] Building CXX object src/modules/articulated_chassis/slip_estimator/CMakeFiles/modules__articulated_chassis__slip_estimator.dir/SlipEstimator.cpp.obj
FAILED: src/modules/articulated_chassis/slip_estimator/CMakeFiles/modules__articulated_chassis__slip_estimator.dir/SlipEstimator.cpp.obj 
/usr/lib/ccache/arm-none-eabi-g++  -DCONFIG_ARCH_BOARD_HKUST_NXT_DUAL_WL_REAR -DMODULE_NAME=\"slip_estimator\" -DPX4_MAIN=slip_estimator_app_main -D_SYS_CDEFS_H_ -D_SYS_REENT_H_ -D__CUSTOM_FILE_IO__ -D__PX4_NUTTX -D__STDC_FORMAT_MACROS -I../../boards/hkust/nxt-dual-wl-rear/src -I../../platforms/nuttx/src/px4/common/include -I. -Isrc/lib -I../../platforms/nuttx/src/px4/stm/stm32h7/include -I../../platforms/common -I../../platforms/common/include -I../../src -I../../src/include -I../../src/lib -I../../src/lib/matrix -I../../src/modules -I../../platforms/nuttx/NuttX/nuttx/arch/arm/src/armv7-m -I../../platforms/nuttx/NuttX/nuttx/arch/arm/src/chip -I../../platforms/nuttx/NuttX/nuttx/arch/arm/src/common -I../../platforms/nuttx/NuttX/apps/include -Iexternal/Install/include -isystem ../../platforms/nuttx/NuttX/include/cxx -isystem ../../platforms/nuttx/NuttX/nuttx/include/cxx -isystem ../../platforms/nuttx/NuttX/nuttx/include -mcpu=cortex-m7 -mthumb -mfpu=fpv5-d16 -mfloat-abi=hard -Os -DNDEBUG   -g -fdata-sections -ffunction-sections -fomit-frame-pointer -fmerge-all-constants -fno-signed-zeros -fno-trapping-math -freciprocal-math -fno-math-errno -fno-strict-aliasing -fvisibility=hidden -include visibility.h -Wall -Wextra -Werror -Warray-bounds -Wcast-align -Wdisabled-optimization -Wdouble-promotion -Wfatal-errors -Wfloat-equal -Wformat-security -Winit-self -Wlogical-op -Wpointer-arith -Wshadow -Wuninitialized -Wunknown-pragmas -Wunused-variable -Wno-missing-field-initializers -Wno-missing-include-dirs -Wno-unused-parameter -fdiagnostics-color=always -Wno-stringop-truncation -fno-builtin-printf -fno-strength-reduce -Wformat=1 -Wunused-but-set-variable -Wno-format-truncation -fcheck-new -Wreorder -Wno-overloaded-virtual -fno-rtti -fno-exceptions -fno-sized-deallocation -fno-threadsafe-statics -nostdinc++ -Wframe-larger-than=2048 -std=gnu++14 -MD -MT src/modules/articulated_chassis/slip_estimator/CMakeFiles/modules__articulated_chassis__slip_estimator.dir/SlipEstimator.cpp.obj -MF src/modules/articulated_chassis/slip_estimator/CMakeFiles/modules__articulated_chassis__slip_estimator.dir/SlipEstimator.cpp.obj.d -o src/modules/articulated_chassis/slip_estimator/CMakeFiles/modules__articulated_chassis__slip_estimator.dir/SlipEstimator.cpp.obj -c ../../src/modules/articulated_chassis/slip_estimator/SlipEstimator.cpp
../../src/modules/articulated_chassis/slip_estimator/SlipEstimator.cpp: In member function 'void SlipEstimator::runBasicEstimation(slip_estimation_s&)':
../../src/modules/articulated_chassis/slip_estimator/SlipEstimator.cpp:212:14: error: 'struct slip_estimation_s' has no member named 'longitudinal_slip_front'; did you mean 'longitudinal_slip_velocity'?
  212 |         slip.longitudinal_slip_front = (_vehicle_state.wheel_speed_front - vehicle_speed) / vehicle_speed;
      |              ^~~~~~~~~~~~~~~~~~~~~~~
      |              longitudinal_slip_velocity
compilation terminated due to -Wfatal-errors.
[3/167] Building CXX object src/modules/articulated_chassis/steering_controller/CMakeFiles/modules__articulated_chassis__steering_controller.dir/steering_controller.cpp.obj
FAILED: src/modules/articulated_chassis/steering_controller/CMakeFiles/modules__articulated_chassis__steering_controller.dir/steering_controller.cpp.obj 
/usr/lib/ccache/arm-none-eabi-g++  -DCONFIG_ARCH_BOARD_HKUST_NXT_DUAL_WL_REAR -DMODULE_NAME=\"steering_controller\" -DPX4_MAIN=steering_controller_app_main -D_SYS_CDEFS_H_ -D_SYS_REENT_H_ -D__CUSTOM_FILE_IO__ -D__PX4_NUTTX -D__STDC_FORMAT_MACROS -I../../boards/hkust/nxt-dual-wl-rear/src -I../../platforms/nuttx/src/px4/common/include -I. -Isrc/lib -I../../platforms/nuttx/src/px4/stm/stm32h7/include -I../../platforms/common -I../../platforms/common/include -I../../src -I../../src/include -I../../src/lib -I../../src/lib/matrix -I../../src/modules -I../../platforms/nuttx/NuttX/nuttx/arch/arm/src/armv7-m -I../../platforms/nuttx/NuttX/nuttx/arch/arm/src/chip -I../../platforms/nuttx/NuttX/nuttx/arch/arm/src/common -I../../platforms/nuttx/NuttX/apps/include -Iexternal/Install/include -isystem ../../platforms/nuttx/NuttX/include/cxx -isystem ../../platforms/nuttx/NuttX/nuttx/include/cxx -isystem ../../platforms/nuttx/NuttX/nuttx/include -mcpu=cortex-m7 -mthumb -mfpu=fpv5-d16 -mfloat-abi=hard -Os -DNDEBUG   -g -fdata-sections -ffunction-sections -fomit-frame-pointer -fmerge-all-constants -fno-signed-zeros -fno-trapping-math -freciprocal-math -fno-math-errno -fno-strict-aliasing -fvisibility=hidden -include visibility.h -Wall -Wextra -Werror -Warray-bounds -Wcast-align -Wdisabled-optimization -Wdouble-promotion -Wfatal-errors -Wfloat-equal -Wformat-security -Winit-self -Wlogical-op -Wpointer-arith -Wshadow -Wuninitialized -Wunknown-pragmas -Wunused-variable -Wno-missing-field-initializers -Wno-missing-include-dirs -Wno-unused-parameter -fdiagnostics-color=always -Wno-stringop-truncation -fno-builtin-printf -fno-strength-reduce -Wformat=1 -Wunused-but-set-variable -Wno-format-truncation -fcheck-new -Wreorder -Wno-overloaded-virtual -fno-rtti -fno-exceptions -fno-sized-deallocation -fno-threadsafe-statics -nostdinc++ -Wframe-larger-than=2048 -std=gnu++14 -MD -MT src/modules/articulated_chassis/steering_controller/CMakeFiles/modules__articulated_chassis__steering_controller.dir/steering_controller.cpp.obj -MF src/modules/articulated_chassis/steering_controller/CMakeFiles/modules__articulated_chassis__steering_controller.dir/steering_controller.cpp.obj.d -o src/modules/articulated_chassis/steering_controller/CMakeFiles/modules__articulated_chassis__steering_controller.dir/steering_controller.cpp.obj -c ../../src/modules/articulated_chassis/steering_controller/steering_controller.cpp
../../src/modules/articulated_chassis/steering_controller/steering_controller.cpp: In static member function 'static int SteeringController::task_spawn(int, char**)':
../../src/modules/articulated_chassis/steering_controller/steering_controller.cpp:460:59: error: invalid new-expression of abstract class type 'SteeringController'
  460 |     SteeringController *instance = new SteeringController();
      |                                                           ^
compilation terminated due to -Wfatal-errors.
ninja: build stopped: subcommand failed.
make: *** [Makefile:227: hkust_nxt-dual-wl-rear_default] Error 1
